test/asm/line-continuation-whitespace.err
error: line-continuation-whitespace.asm(7):
    Label "foo" created outside of a SECTION
Assembly aborted with 1 error!
